tests/errors/float_invalid_string.py
# expect_error: ValueError
print(float("1.2xyz"))